button when clicked is able to remove items

--- a/popup.html
+++ b/popup.html
@@ -1,34 +1,38 @@
-<b> Home </b>
-<label class="switch">
-    <link rel="stylesheet" href="switch.css">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+<!DOCTYPE html>
+<html>
+    <b> Home </b>
+    <label class="switch">
+        <link rel="stylesheet" href="switch.css">
+        <input type="checkbox" id="home_slider">
+        <span class="slider round"></span>
+    </label>
 
-<b> Explore </b>
-<label class="switch">
-    <link rel="stylesheet" href="switch.css">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+    <b> Explore </b>
+    <label class="switch">
+        <link rel="stylesheet" href="switch.css">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 
-<b> Subscription </b>
-<label class="switch">
-    <link rel="stylesheet" href="switch.css">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+    <b> Subscription </b>
+    <label class="switch">
+        <link rel="stylesheet" href="switch.css">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 
-<b> Subscriptions </b>
-<label class="switch">
-    <link rel="stylesheet" href="switch.css">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+    <b> Subscriptions </b>
+    <label class="switch">
+        <link rel="stylesheet" href="switch.css">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
 
-<b> Recommendations </b>
-<label class="switch">
-    <link rel="stylesheet" href="switch.css">
-    <input type="checkbox">
-    <span class="slider round"></span>
-</label>
+    <b> Recommendations </b>
+    <label class="switch">
+        <link rel="stylesheet" href="switch.css">
+        <input type="checkbox">
+        <span class="slider round"></span>
+    </label>
+    <script src="popup.js"></script>
+</html>
