--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <b> Home </b>
+    <b> Navigation </b>
     <label class="switch">
         <link rel="stylesheet" href="switch.css">
-        <input type="checkbox" id="home_slider">
+        <input type="checkbox" id="navigation_toggle">
         <span class="slider round"></span>
     </label>
 
