added in recommendations turn off on feature

--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,10 @@
         <span class="slider round"></span>
     </label>
 
-    <b> Explore </b>
+    <b> Recommendations </b>
     <label class="switch">
         <link rel="stylesheet" href="switch.css">
-        <input type="checkbox">
+        <input type="checkbox" id="recommendations_toggle">
         <span class="slider round"></span>
     </label>
 
