--- a/popup.html
+++ b/popup.html
@@ -14,24 +14,10 @@
         <span class="slider round"></span>
     </label>
 
-    <b> Subscription </b>
+    <b> Comments </b>
     <label class="switch">
         <link rel="stylesheet" href="switch.css">
-        <input type="checkbox">
-        <span class="slider round"></span>
-    </label>
-
-    <b> Subscriptions </b>
-    <label class="switch">
-        <link rel="stylesheet" href="switch.css">
-        <input type="checkbox">
-        <span class="slider round"></span>
-    </label>
-
-    <b> Recommendations </b>
-    <label class="switch">
-        <link rel="stylesheet" href="switch.css">
-        <input type="checkbox">
+        <input type="checkbox", id="comments_toggle">
         <span class="slider round"></span>
     </label>
     <script src="popup.js"></script>
