upgraded popup styling

--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <b> Navigation </b>
-    <label class="switch">
-        <link rel="stylesheet" href="switch.css">
-        <input type="checkbox" id="navigation_toggle">
-        <span class="slider round"></span>
-    </label>
-
-    <b> Recommendations </b>
-    <label class="switch">
-        <link rel="stylesheet" href="switch.css">
-        <input type="checkbox" id="recommendations_toggle">
-        <span class="slider round"></span>
-    </label>
-
-    <b> Comments </b>
-    <label class="switch">
-        <link rel="stylesheet" href="switch.css">
-        <input type="checkbox", id="comments_toggle">
-        <span class="slider round"></span>
-    </label>
-    <script src="popup.js"></script>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <b> Navigation </b>
+        <label class="switch">
+            <input type="checkbox" id="navigation_toggle">
+            <span class="slider round"></span>
+        </label>
+        <b> Recommendations </b>
+        <label class="switch">
+            <input type="checkbox" id="recommendations_toggle">
+            <span class="slider round"></span>
+        </label>
+        <b> Comments </b>
+        <label class="switch">
+            <input type="checkbox", id="comments_toggle">
+            <span class="slider round"></span>
+        </label>
+        <script src="popup.js"></script>
+    </body>
 </html>
